[gd_scene load_steps=4 format=3 uid="uid://c1vdq86ytdhkd"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_14hh0"]
[ext_resource type="PackedScene" uid="uid://dw1f82dsfouob" path="res://Scenes/world.tscn" id="2_fgp0l"]
[ext_resource type="PackedScene" uid="uid://bqr16sbrw00w8" path="res://Scenes/player.tscn" id="3_5sm1q"]

[node name="GameScene" type="Node3D"]
script = ExtResource("1_14hh0")
world = ExtResource("2_fgp0l")
player_scene = ExtResource("3_5sm1q")

[node name="HostMenu" type="CanvasLayer" parent="."]
process_priority = 10

[node name="Host" type="Button" parent="HostMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_top = 218.0
offset_right = 18.0
offset_bottom = 249.0
grow_horizontal = 2
text = "CREATE"

[node name="Join" type="Button" parent="HostMenu"]
offset_left = 435.0
offset_top = 255.0
offset_right = 514.0
offset_bottom = 286.0
text = "JOIN"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]

[connection signal="pressed" from="HostMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="HostMenu/Join" to="." method="_on_join_pressed"]
